Updating everything to Sweden. Including dynamic dropdowns

--- a/public/data/movement_maps/index.html
+++ b/public/data/movement_maps/index.html
@@ -141,7 +141,7 @@ https://github.com/alex-shpak/hugo-book
   
   <div class="flex-even markdown-inner">
     Granularity: <strong>Administrative regions</strong>
-<img src="/data_description_movement_admin.png" alt="img">
+<img src="/data_description_movement" alt="img">
   </div>
   
   <div class="flex-even markdown-inner">
